remove otf font, remove margins to avoid scrollbar

--- a/zellij-client/assets/style.css
+++ b/zellij-client/assets/style.css
@@ -1,6 +1,5 @@
-@font-face {
-    font-family: "MonaspaceNeon";
-    src: url("/assets/MonaspiceNeNerdFontMono-Regular.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
+body,
+#terminal {
+    height: 100vh;
+    margin: 0;
 }
